--- a/.github/workflows/main_breastcancer.yml
+++ b/.github/workflows/main_breastcancer.yml
@@ -33,7 +33,7 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip project_files/app.py project_files/style.css project_files/requirements.txt project_files/*.jpg project_files/breast_cancer_model.h5
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
