--- a/project_files/requirements.txt
+++ b/project_files/requirements.txt
@@ -72,8 +72,7 @@ streamlit==1.41.1
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
-tensorflow>=2.16.0
-tensorflow_intel==2.16.1
+tensorflow==2.15.0
 termcolor==2.5.0
 toml==0.10.2
 tornado==6.4.1
