--- a/project_files/requirements.txt
+++ b/project_files/requirements.txt
@@ -50,7 +50,7 @@ parso==0.8.4
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
-protobuf==5.29.2
+protobuf==3.20.3               # Downgraded for compatibility
 psutil==6.1.0
 pure_eval==0.2.3
 pyarrow==18.1.0
@@ -70,7 +70,7 @@ smmap==5.0.2
 stack-data==0.6.3
 streamlit==1.41.1
 tenacity==9.0.0
-tensorboard==2.18.0
+tensorboard==2.15.0             # Downgraded for compatibility
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 termcolor==2.5.0
