--- a/project_files/requirements.txt
+++ b/project_files/requirements.txt
@@ -36,7 +36,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.2.0
+ml-dtypes==0.4.1                # Updated to fix version conflicts
 namex==0.0.8
 narwhals==1.20.1
 nest-asyncio==1.6.0
@@ -50,7 +50,7 @@ parso==0.8.4
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
-protobuf==3.20.3               # Downgraded for compatibility
+protobuf==3.20.3                # Downgraded for compatibility
 psutil==6.1.0
 pure_eval==0.2.3
 pyarrow==18.1.0
@@ -84,4 +84,4 @@ watchdog==6.0.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wheel==0.45.1
-wrapt==1.17.0
+wrapt==1.14.1                   # Downgraded for TensorFlow compatibility
