--- a/project_files/requirements.txt
+++ b/project_files/requirements.txt
@@ -36,7 +36,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-ml-dtypes==0.2.0                # Updated to fix version conflicts
+ml-dtypes==0.2.0
 namex==0.0.8
 narwhals==1.20.1
 nest-asyncio==1.6.0
@@ -50,7 +50,7 @@ parso==0.8.4
 pillow==11.1.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
-protobuf==3.20.3                # Downgraded for compatibility
+protobuf==3.20.3
 psutil==6.1.0
 pure_eval==0.2.3
 pyarrow==18.1.0
@@ -58,7 +58,7 @@ pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306  # Or the latest version
+pywin32; sys_platform == 'win32'
 pyzmq==26.2.0
 referencing==0.35.1
 requests==2.32.3
@@ -70,7 +70,7 @@ smmap==5.0.2
 stack-data==0.6.3
 streamlit==1.41.1
 tenacity==9.0.0
-tensorboard==2.15.0             # Downgraded for compatibility
+tensorboard==2.15.0
 tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 termcolor==2.5.0
@@ -84,4 +84,4 @@ watchdog==6.0.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wheel==0.45.1
-wrapt==1.14.1                   # Downgraded for TensorFlow compatibility
+wrapt==1.14.1
